删除不需要的目录

--- a/ui/package.json
+++ b/ui/package.json
@@ -37,6 +37,7 @@
     "classnames": "^2.3.1",
     "connect-history-api-fallback": "^2.0.0",
     "copy-to-clipboard": "^3.3.1",
+    "graphql-tag": "^2.12.6",
     "i18next": "^21.8.13",
     "mapbox-gl": "^2.9.1",
     "postcss": "^8.4.14",
@@ -47,6 +48,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.33.1",
     "react-i18next": "^11.18.0",
+    "react-router": "^6.8.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-swipeable": "^7.0.0",
