--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -13,7 +13,7 @@ services:
       - db_data:/var/lib/mysql
 
   photoview:
-    image: viktorstrate/photoview:2
+    image: viktorstrate/photoview:linux-amd64-87e80cf2-push
     restart: always
     ports:
       - "8000:80"
@@ -26,6 +26,9 @@ services:
       - PHOTOVIEW_LISTEN_IP=photoview
       - PHOTOVIEW_LISTEN_PORT=80
       - PHOTOVIEW_MEDIA_CACHE=/app/cache
+      - PHOTOVIEW_DISABLE_FACE_RECOGNITION=1
+      - PHOTOVIEW_DISABLE_VIDEO_ENCODING=1
+      - PHOTOVIEW_DISABLE_RAW_PROCESSING=1
       
       # Optional: If you are using Samba/CIFS-Share and experience problems with "directory not found"
       # Enable the following Godebug
@@ -44,7 +47,7 @@ services:
       # If the photos are located at `/home/user/photos`, then change this value
       # to the following: `/home/user/photos:/photos:ro`.
       # You can mount multiple paths, if your photos are spread across multiple directories.
-      - ./photos_path:/photos:ro
+      - /mnt/c/Users/markxxzeng/Desktop/精选客片:/photos:ro
 
 volumes:
   db_data:
