--- a/api/.env
+++ b/api/.env
@@ -10,12 +10,12 @@ PHOTOVIEW_MYSQL_URL=admin:password@tcp(localhost)/photoview
 # Specifies the filepath for the sqlite database, if PHOTOVIEW_DATABASE_DRIVER is set to 'sqlite'
 PHOTOVIEW_SQLITE_PATH=photoview.db
 
-PHOTOVIEW_LISTEN_IP=172.19.209.69
+PHOTOVIEW_LISTEN_IP=localhost
 PHOTOVIEW_LISTEN_PORT=4001
 
 # The url from which the server can be accessed publicly
-PHOTOVIEW_API_ENDPOINT=http://172.19.209.69:4001/
-PHOTOVIEW_UI_ENDPOINT=http://172.19.209.69:1234/
+PHOTOVIEW_API_ENDPOINT=http://localhost:4001/
+PHOTOVIEW_UI_ENDPOINT=http://localhost:1234/
 PHOTOVIEW_DISABLE_FACE_RECOGNITION=1
 PHOTOVIEW_DISABLE_VIDEO_ENCODING=1
 PHOTOVIEW_DISABLE_RAW_PROCESSING=1
