fix login, fix endpoint

--- a/api/.env
+++ b/api/.env
@@ -1,7 +1,7 @@
 # Copy this file to .env
 
-PHOTOVIEW_DATABASE_DRIVER=sqlite
-PHOTOVIEW_MYSQL_URL=admin:password@tcp(localhost)/photoview
+PHOTOVIEW_DATABASE_DRIVER=mysql
+PHOTOVIEW_MYSQL_URL=cyplog:cyplog@tcp(localhost)/cyplog
 
 # Specifies the connection string for the postgres database, if PHOTOVIEW_DATABASE_DRIVER is set to 'postgres'
 # See https://www.postgresql.org/docs/current/libpq-ssl.html for possible ssl modes
@@ -11,20 +11,20 @@ PHOTOVIEW_MYSQL_URL=admin:password@tcp(localhost)/photoview
 PHOTOVIEW_SQLITE_PATH=photoview.db
 
 PHOTOVIEW_LISTEN_IP=localhost
-PHOTOVIEW_LISTEN_PORT=4001
+PHOTOVIEW_LISTEN_PORT=1234
 
 # The url from which the server can be accessed publicly
-PHOTOVIEW_API_ENDPOINT=http://localhost:4001/
-PHOTOVIEW_UI_ENDPOINT=http://localhost:1234/
-PHOTOVIEW_DISABLE_FACE_RECOGNITION=1
-PHOTOVIEW_DISABLE_VIDEO_ENCODING=1
-PHOTOVIEW_DISABLE_RAW_PROCESSING=1
+#PHOTOVIEW_API_ENDPOINT=http://192.168.2.53:4001/
+#PHOTOVIEW_UI_ENDPOINT=http://192.168.2.53:1234/
 
 # Path where media should be cached, defaults to ./media_cache
-# PHOTOVIEW_MEDIA_CACHE=./media_cache
+PHOTOVIEW_MEDIA_CACHE=./media_cache
+# Path where media remove recycle defaults to ./recycle
+PHOTOVIEW_MEDIA_CACHE=/data/recycle
 
 # Set to 1 for the server to also serve the built static ui files
-PHOTOVIEW_SERVE_UI=0
+PHOTOVIEW_SERVE_UI=1
+PHOTOVIEW_UI_PATH=/root/photoview/ui/dist
 
 # Enter a valid mapbox token, to enable maps feature
 # A token can be created for free at https://mapbox.com
@@ -33,3 +33,7 @@ PHOTOVIEW_SERVE_UI=0
 # Set to 1 to set server in development mode, this enables graphql playground
 # Remove this if running in production
 PHOTOVIEW_DEVELOPMENT_MODE=0
+
+PHOTOVIEW_DISABLE_FACE_RECOGNITION=1
+PHOTOVIEW_DISABLE_VIDEO_ENCODING=1
+PHOTOVIEW_DISABLE_RAW_PROCESSING=1
